lustre/include/lustre_export.h
@@ -259,7 +259,8 @@ struct obd_export {
 				 * set as 0 (false)
 				 */
 				exp_old_falloc:1,
-				exp_hashed:1;
+				exp_hashed:1,
+				exp_not_timed:1;
 	/* also protected by exp_lock */
 	enum lustre_sec_part	exp_sp_peer;
 	struct sptlrpc_flavor	exp_flvr;		/* current */
