lustre/obdclass/obd_config.c
@@ -640,7 +640,9 @@ int class_attach(struct lustre_cfg *lcfg)
 	}
 
 	obd->obd_self_export = exp;
-	list_del_init(&exp->exp_obd_chain_timed);
+	spin_lock(&exp->exp_lock);
+	exp->exp_not_timed = 1;
+	spin_unlock(&exp->exp_lock);
 	class_export_put(exp);
 
 	rc = class_register_device(obd);
